force-app/main/default/objects/OCRTemplateMapping__c/OCRTemplateMapping__c.object-meta.xml
<CustomObject>
    <label>OCRTemplateMapping</label>
    <nameField>
        <label>OCRTemplateMapping 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>