force-app/main/default/objects/OCRTemplateMapping__c/fields/MaxX__c.field-meta.xml
<CustomField>
    <fullName>MaxX__c</fullName>
    <label>MaxX</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>