force-app/main/default/objects/OCRTemplateMapping__c/fields/MaxY__c.field-meta.xml
<CustomField>
    <fullName>MaxY__c</fullName>
    <label>MaxY</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>