force-app/main/default/objects/OCRTemplateMapping__c/fields/MinX__c.field-meta.xml
<CustomField>
    <fullName>MinX__c</fullName>
    <label>MinX</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>