force-app/main/default/objects/OCRTemplateMapping__c/fields/MinY__c.field-meta.xml
<CustomField>
    <fullName>MinY__c</fullName>
    <label>MinY</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>